Prevent intro title from wraping on small screens

--- a/themes/sherpa/styles/_sections.sass
+++ b/themes/sherpa/styles/_sections.sass
@@ -36,6 +36,7 @@ section
   &#introduction
     h1
       line-height: 2.5rem
+      font-size: 1.5rem
       +breakpoint(medium)
         font-size: 3rem
         line-height: 3.5rem
